syntax = "proto3";

package api.auth.v1;

option go_package = "github.com/gxrlxv/musique/auth_service/api/auth/v1";


// The auth service definition.
service Auth{
  rpc SignUp(SignUpRequest) returns(SignUpReply){}
  rpc SignIn(SignInRequest) returns(SignInReply){}
}

message SignUpRequest{
    string username = 1;
    string email = 2;
    string password = 3;
    string repeat_password = 4;
    string first_name = 5;
    string last_name = 6;
    string gender = 7;
    string country = 8;
    string city = 9;
    string phone = 10;
}

message SignUpReply{

}

message SignInRequest{
  string email = 1;
  string password = 2;
}

message SignInReply{

}